made imgs more boxy, fixed bug with off screen menu displaying on mobile

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -179,7 +179,7 @@ header {
 
 nav {
   position: absolute;
-  right: -12.75rem;
+  right: -17.5rem;
   top: 0;
   overflow-y: scroll;
   overflow-x: hidden;
@@ -381,7 +381,7 @@ main {
             background: #ccc;
             position: relative;
             top: 0;
-            width: 90vw;
+            width: 80vw;
             height: 50vh;
             padding: 0;
             margin: 1rem 0;
@@ -463,7 +463,7 @@ main {
       font-size: 1.5rem; }
     #projects .grid .card figure a img, #projects .grid .card figure a #canvasPort {
       width: 100%;
-      height: 40vh; }
+      height: 50vh; }
     #projects .grid .card figure a #canvasPort {
       width: 30vw; } }
 
@@ -544,7 +544,7 @@ main {
     #blog .blog-grid img {
       width: 100%;
       height: auto;
-      max-width: 90vw;
+      max-width: 80vw;
       border-radius: 3rem;
       opacity: 0.6;
       transition: 0.5s ease-in-out; }
