--- a/src/scss/partials/_blog.scss
+++ b/src/scss/partials/_blog.scss
@@ -59,7 +59,7 @@
         img {
             width: 100%;
             height: auto;
-            max-width: 90vw;
+            max-width: 80vw;
             border-radius: 3rem;
             opacity: 0.6;
             transition: 0.5s ease-in-out;
