--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -116,7 +116,7 @@ header {
 
 nav {
     position: absolute;
-    right: -12.75rem;
+    right: -17.5rem;
     top: 0;
     overflow-y: scroll;
     overflow-x: hidden;
