--- a/src/scss/partials/_main-content.scss
+++ b/src/scss/partials/_main-content.scss
@@ -152,7 +152,7 @@ main {
                         background: #ccc;
                         position: relative;
                         top: 0;
-                        width: 90vw;
+                        width: 80vw;
                         height: 50vh;
                         padding: 0;
                         margin: 1rem 0;
@@ -314,7 +314,7 @@ main {
 
           img, #canvasPort {
             width: 100%;
-            height: 40vh;
+            height: 50vh;
           }
 
           #canvasPort {
